fix dashboard on mobile

--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -48,6 +48,7 @@
   .content {
     .dashboard {
       padding: 10px;
+      margin-top: $small-nav-height;
 
       .graphs {
         height: $small-graphs-height;
